CVS code -
- doc/syntax/asm.nanorc, doc/syntax/c.nanorc, doc/syntax/sh.nanorc:
	- Copy the regex that highlights trailing whitespace from
	  doc/syntax/java.nanorc to these files, as it's also useful in
	  them. (Mike Frysinger, minor tweaks by DLR)

GNU nano 2.0.4 - 2007.04.06
- winio.c:
  get_escape_seq_kbinput()
	- Add escape sequences for Terminal. (DLR)
- doc/faq.html:
	- Update email address. (DLR)
- AUTHORS:
	- Update email address. (DLR)

GNU nano 2.0.3 - 2007.01.29
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Don't install the nanorc manpages or generate their HTML
	  versions if nano is built without nanorc support.  Changes to
	  configure.ac, doc/man/Makefile.am, and doc/man/fr/Makefile.am.
	  (DLR)
	- Simplify the commands that generate HTML documentation in
	  order to remove unnecessary usage of cat.  Changes to
	  doc/man/Makefile.am, doc/man/fr/Makefile.am, and
	  doc/texinfo/Makefile.am. (DLR)
- files.c:
  do_writeout()
	- When setting retval to the return value of
	  write_(marked_)?file(), use the "?" operator instead of an
	  if/else clause. (DLR)
  is_dir()
	- Don't assign dirptr's value using buf until we've asserted
	  that buf isn't NULL. (DLR)
	- Remove unneeded assert. (DLR)
- proto.h:
	- Add missing is_dir() prototype. (DLR)
- search.c:
  regexp_init()
	- Don't assign rc's value via regcomp() until we've asserted
	  that regexp_compiled is FALSE. (DLR)
- text.c:
  do_alt_speller()
	- Rename variable altspell_error to alt_spell_error, for
	  consistency. (DLR)
  do_spell()
	- Rename variable i to status, for clarity. (DLR)
- winio.c:
  do_credits()
	- Update the last copyright notice to include 2007. (DLR)
- Makefile.am:
	- Add README.CVS to EXTRA_DIST, so that nano's CVS checkout
	  instructions aren't only available in its CVS snapshots. (DLR)
- README:
	- Add more miscellaneous cosmetic fixes. (DLR)
- README.CVS:
	- Update for the 2.0 branch of nano. (DLR)
- NEWS:
	- Formatting fix. (DLR)