@@ -1,4 +1,9 @@
 CVS code -
+- files.c:
+  get_real_dir_from_tilde()
+	- Fix segfault when dealing with directory names that begin with
+	  "~", but that aren't users' home directories. (DLR, found by
+	  Justin Fletcher)
 - doc/syntax/asm.nanorc, doc/syntax/c.nanorc, doc/syntax/sh.nanorc:
 	- Copy the regex that highlights trailing whitespace from
 	  doc/syntax/java.nanorc to these files, as it's also useful in
